--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.4.1",
-    "gh-pages": "^2.2.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.9.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "bootstrap": "^4.5.0",
+    "react": "^17.0.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.0",
+    "react-icons": "^4.0.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
