--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.5.0",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.0.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-scripts": "^4.0.0"
+    "react-scripts": "^4.0.0",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
