--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-infinite-scroller": "^1.2.1",
     "bootstrap": "^4.5.0",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
